# cfDNA_project

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  justfile  pyproject.toml
confs/: thesis.yaml
notebooks/: 01_generate_negative_dhs.ipynb  02_collect_data.ipynb  03_train_model.ipynb  04_benchmark.ipynb
project_scripts/: build_matrices.py  build_matrices_joint.py  classification.ipynb  classification_svc.py  pca.py  pca_joint.py  preprocess_fragments.py  regression.ipynb  workflow.snake  workflow_prostate.snake
project_scripts/ipynbs/: PCA.ipynb  Preprocessing.ipynb  build_matrices.ipynb  classification.ipynb  downsampling.ipynb
project_scripts/test_statistics/: base.py  ifs.py  lwps.py  ocf.py  pfe.py
scripts/: build_matrices.py  build_matrices_joint.py  calculate_statistics.py  calculate_test_statistics.py  classification.ipynb  config.yaml  constants.py  pca.py  preprocess_dhs.py  preprocess_fragments.py  preprocessing.py  test_preprocess_fragments.py  visualize_matrix.py  visualize_statistics.py  workflow.snake
scripts/ipynbs/: PCA.ipynb  Preprocessing.ipynb
scripts/test_statistics/: __init__.py  fdi.py  ifs.py  lwps.py  ocf.py  pfe.py
tasks/: check.just  clean-all.just  clean-output.just  clean.just  dry-run.just  format.just  gen-test.just  local-run.just  slurm-run.just
tests/: conftest.py  test_preprocessing_dhs.py  test_preprocessing_fragments.py  test_preprocessing_matrices.py  test_preprocessing_transforms.py  test_scripts.py  test_training.py
thesis_scripts/: 01_generate_negative_dhs.ipynb  02_calculate_min_coverage.py  02_collect_data.ipynb  02_collect_data.snake  02_compute_bin_edges.py  02_downsample_dhs.py  02_downsample_matrices.py  02_preprocess_dhs.py  02_preprocess_fragments.py  02_rebin_matrices.py  03_train_model.ipynb  04_inference.snake  04_run_inference.py  05_benchmark.snake  05_build_matrices_joint.py  README.md  config.yaml
thesis_scripts/models/: __init__.py  cnn_model.py  mlp_model.py
workflow/: Snakefile
workflow/rules/: accessibility_scores.smk  benchmark.smk  common.smk  generate_negative_dhs.smk  inference.smk  preprocessing.smk  training.smk
workflow/scripts/: build_matrices_joint.py  calculate_coverage.py  calculate_min_coverage.py  calculate_statistics.py  compute_bin_edges.py  downsample_dhs.py  downsample_matrices.py  generate_negative_dhs.py  preprocess_dhs.py  preprocess_fragments.py  (+3 more)
(+20 files in other folders)
