# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "cfDNA_project"
version = "0.1.0"
description = "TODO"
authors = [{ name = "markoc1120" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["python", "package"]
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "py2bit>=0.3.3",
    "snakemake>=9.17.2",
    "torch>=2.10.0",
    "torchmetrics>=1.9.0",
    "torchview>=0.2.7",
]

# LINKS

[project.urls]
Homepage = "https://github.com/markoc1120/cfDNA_project"
Documentation = "https://markoc1120.github.io/cfDNA_project/"
Repository = "https://github.com/markoc1120/cfDNA_projecte"
"Bug Tracker" = "https://github.com/markoc1120/cfDNA_project/issues"
Changelog = "https://github.com/markoc1120/cfDNA_project/blob/main/CHANGELOG.md"

# DEPENDENCIES

[dependency-groups]
check = [
    "bandit>=1.8.3",
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
commit = ["commitizen>=4.4.1", "pre-commit>=4.1.0"]
dev = ["rust-just>=1.39.0"]
doc = ["pdoc>=15.0.1"]
notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

# TOOLS

[tool.uv]
default-groups = ["check", "commit", "dev", "doc", "notebook"]

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]
"workflow/scripts/*.py" = ["F821"]

[tool.hatch.build.targets.wheel]
packages = ["src/cfdna"]

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
